@@ -28,7 +28,7 @@
  </stability>
  <license uri="http://opensource.org/licenses/bsd-license.php">BSD</license>
  <notes>
-*
+* Fix the listTimeObjects API for shared sources (Bug #9649).
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
